@@ -198,7 +198,7 @@ public class MainActivity extends NativeActivity {
       Intent browserIntent = new Intent(Intent.ACTION_VIEW, Uri.parse(url));
       startActivity(browserIntent);
     } catch (Exception e) {
-      Log.i(TAG, "browseFile failed: " + e.toString());
+      Log.i(TAG, "browseFile failed: ", e);
     }
   }
 
@@ -443,7 +443,7 @@ public class MainActivity extends NativeActivity {
           _mediaPlayer.start();
         }
         catch (IOException e) {
-          Log.i(TAG, "Failed: ", e);
+          Log.i(TAG, "playAudio failed: ", e);
         }
       }
     }).start();
@@ -920,7 +920,7 @@ public class MainActivity extends NativeActivity {
       p.load(getApplication().openFileInput("settings.txt"));
       int socket = Integer.parseInt(p.getProperty("serverSocket", "-1"));
       String token = p.getProperty("serverToken", new Date().toString());
-      if (socket != -1) {
+      if (socket > 1023 && socket < 65536) {
         startServer(socket, token);
       } else {
         Log.i(TAG, "Web service disabled");
@@ -941,9 +941,9 @@ public class MainActivity extends NativeActivity {
       }
       input.close();
     } catch (FileNotFoundException e) {
-      Log.i(TAG, "Failed: " + e.toString());
+      Log.i(TAG, "readBuffer failed: ", e);
     } catch (IOException e) {
-      Log.i(TAG, "Failed: " + e.toString());
+      Log.i(TAG, "readBuffer failed: ", e);
     }
     return result.toString();
   }
@@ -960,10 +960,17 @@ public class MainActivity extends NativeActivity {
   }
 
   private void runServer(final int socketNum, final String token) throws IOException {
-    ServerSocket serverSocket = new ServerSocket(socketNum);
     Log.i(TAG, "Listening :" + socketNum);
     Log.i(TAG, "Token :" + token);
-    while (true) {
+    ServerSocket serverSocket;
+    try {
+      serverSocket = new ServerSocket(socketNum);
+    }
+    catch (IllegalArgumentException e) {
+      Log.i(TAG, "Failed to start server: ", e);
+      serverSocket = null;
+    }
+    while (serverSocket != null) {
       Socket socket = null;
       DataInputStream inputStream = null;
       try {
@@ -1002,7 +1009,8 @@ public class MainActivity extends NativeActivity {
         }
       }
       catch (IOException e) {
-        Log.i(TAG, "Failed: " + e.toString());
+        Log.i(TAG, "Server failed: ", e);
+        break;
       }
       finally {
         Log.i(TAG, "socket cleanup");
@@ -1014,6 +1022,7 @@ public class MainActivity extends NativeActivity {
         }
       }
     }
+    Log.i(TAG, "server stopped");
   }
 
   private void sendResponse(Socket socket, String content) throws IOException {
@@ -1053,7 +1062,7 @@ public class MainActivity extends NativeActivity {
           runServer(socketNum, token);
         }
         catch (IOException e) {
-          Log.i(TAG, "Failed: " + e.toString());
+          Log.i(TAG, "startServer failed: ", e);
         }
       }
     });
